--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "@tailwindcss/forms": "^0.5.9",
     "@tanstack/react-query": "^5.62.1",
     "@tanstack/react-query-devtools": "^5.62.1",
     "class-variance-authority": "^0.7.1",
