Revert "feat : tsBuildInfoFile옵션 오류 해결"
This reverts commit 015f6dfea5c3d840ea5c49ee61d151d06840e7cd.

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -18,8 +18,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "incremental": true,
-    "composite": true
+    "noUncheckedSideEffectImports": true
   },
   "include": ["vite.config.ts"]
 }
