--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query-devtools": "^5.62.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.13.1",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
