--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
+    "react-chrome-dino": "^0.1.3",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
     "tailwind-merge": "^2.5.5",
