feat : 사용자 데이터 관리하는 useCalendar 훅 구현

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.3.1",
     "react-chrome-dino": "^0.1.3",
     "react-dom": "^18.3.1",
+    "react-infinite-scroller": "^1.2.6",
     "react-router-dom": "^7.0.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
